# TheWeiSungEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSources.cmake  README.md  Year3 Games Tech Project Group 1.sln
Assets/: player.json  player.rsd
Debug/: Year3 Games Tech Project Group 1.ilk
Release/: Year3 Games Tech Project Group 1.iobj  Year3 Games Tech Project Group 1.ipdb
Year3 Games Tech Project Group 1/: AABB.h  AStarGridNavigator.cpp  AStarGridNavigator.h  AssetManager.cpp  AssetManager.h  AttackerIdentityScript.cpp  AttackerIdentityScript.h  AudioManagementSystem.cpp  AudioSource.cpp  AudioSource.h  BitmapFont.cpp  BitmapFont.h  BitmapString.cpp  BitmapString.h  BoxCollider.cpp  BoxCollider.h  BulletScript.cpp  BulletScript.h  CameraFollowScript.cpp  CameraFollowScript.h  CerealTypeRegistration.h  CharacterMovementScript.cpp  CharacterMovementScript.h  CharacterScript.cpp  CharacterScript.h  CircleCollider.cpp  CircleCollider.h  CivWaypointScript.cpp  CivWaypointScript.h  Collectable.cpp  Collectable.h  Collider.cpp  Collider.h  CollisionData.h  CollisionHandler.h  CollisionMask.h  Component.cpp  Component.h  ComponentHeaders.h  ComponentManager.cpp  (+100 more)
Year3 Games Tech Project Group 1/CharacterInfo/: Surnames.txt
Year3 Games Tech Project Group 1/Debug/: vc140.idb
Year3 Games Tech Project Group 1/Debug/Year3 Ga.B985758F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Year3 Games Tech Project Group 1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Year3 Games Tech Project Group 1/Font/: FontData.wsfd
Year3 Games Tech Project Group 1/Release/Year3 Ga.B985758F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Year3 Games Tech Project Group 1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Year3 Games Tech Project Group 1/Tilesets/: GameMap.tmx  Tileset1(old).tmx  Tileset1.tmx
include/: AABB.h  AssetManager.h  AttackTypes.h  AttackerIdentityScript.h  AudioManagementSystem.h  AudioSource.h  BitmapFont.h  BitmapString.h  BloodSplatterScript.h  BoxCollider.h  BulletScript.h  CharacterScript.h  CircleCollider.h  CivWaypointScript.h  Collectable.h  Collider.h  CollisionData.h  CollisionHandler.h  CollisionMask.h  Component.h  ComponentData.h  ComponentHeaders.h  ComponentManager.h  DamageScript.h  DeathTimer.h  Debug.h  DebugDraw.h  Engine.h  EngineSettings.h  FileManager.h  Game.h  GameObject.h  GameObjectFactory.h  GameObjectManager.h  Graphics.h  GrenadeScript.h  HealthScript.h  Input.h  Joint.h  Math.h  (+37 more)
src/: AssetManager.cpp  AttackerIdentityScript.cpp  AudioManagementSystem.cpp  AudioSource.cpp  BitmapFont.cpp  BitmapString.cpp  BloodSplatterScript.cpp  BoxCollider.cpp  BulletScript.cpp  CharacterScript.cpp  CircleCollider.cpp  CivWaypointScript.cpp  Collectable.cpp  Collider.cpp  CollisionData.cpp  Component.cpp  ComponentManager.cpp  DamageScript.cpp  DeathTimer.cpp  Debug.cpp  DebugDraw.cpp  Engine.cpp  EngineSettings.cpp  Game.cpp  GameObject.cpp  GameObjectFactory.cpp  GameObjectManager.cpp  Graphics.cpp  GrenadeScript.cpp  HealthScript.cpp  Input.cpp  Joint.cpp  Main.cpp  Math.cpp  NameGenerator.cpp  ParsedTMX.cpp  Physics.cpp  PhysicsSystem.cpp  PlayerScript.cpp  PolygonCollider.cpp  (+22 more)
